crates/gaia/output_y5.txt
   Compiling cfd-mesh v0.1.0 (C:\Users\RyanClanton\gcli\software\millifluidic_design\CFDrs\crates\cfd-mesh)
error[E0425]: cannot find function `remove_degenerate_boolean_faces` in this scope
   --> crates\cfd-mesh\src\application\csg\boolean\indexed.rs:252:5
    |
252 |     remove_degenerate_boolean_faces(mesh);
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ help: a function with a similar name exists: `first_degenerate_boolean_face`
...
375 | fn first_degenerate_boolean_face(mesh: &IndexedMesh) -> Option<crate::domain::core::index::FaceId> {
    | -------------------------------------------------------------------------------------------------- similarly named function `first_degenerate_boolean_face` defined here

For more information about this error, try `rustc --explain E0425`.
error: could not compile `cfd-mesh` (lib) due to 1 previous error
